Quiz: correct MCQ label alignment

--- a/designsystem-dev/css/main.css
+++ b/designsystem-dev/css/main.css
@@ -3869,7 +3869,10 @@ img.cb-palette {
           padding-bottom: 0;
           margin-bottom: 0.5rem !important; }
           .que .content .formulation .ablock .answer .r0 label, .que .content .formulation .ablock .answer .r1 label {
-            font-size: 1rem; }
+            font-size: 1rem;
+            line-height: 1.5; }
+            .que .content .formulation .ablock .answer .r0 label p, .que .content .formulation .ablock .answer .r1 label p {
+              margin: 0; }
           .que .content .formulation .ablock .answer .r0 img, .que .content .formulation .ablock .answer .r1 img {
             display: none; }
   .que .content .outcome {
